# wspotify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
tests/: conftest.py  test_album.py  test_artist.py
wspotify/: __init__.py  album.py  artist.py  base.py  exceptions.py  schemas.py
wspotify/authorization/: __init__.py  authorization_code.py  authorization_code_pkce.py  base.py  client_credentials.py  exceptions.py  schemas.py  scopes.py  utils.py
